<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <include layout="@layout/player_status_bar" />

        <TextView
            style="@style/SlagalicaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:background="@color/slagalica_dark_blue"
            android:padding="@dimen/card_padding"
            android:text="@string/spojnice" />

        <LinearLayout
            style="@style/SlagalicaCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:orientation="vertical">

            <TextView
                android:id="@+id/roundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_one"
                android:textColor="@color/slagalica_text"
                android:textSize="@dimen/body_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentPlayerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/current_player_one"
                android:textColor="@color/slagalica_text"
                android:textSize="@dimen/body_text_size" />

            <TextView
                android:id="@+id/timerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_small"
                android:text="@string/time_30"
                android:textColor="@color/slagalica_text"
                android:textSize="@dimen/body_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playerOneScoreText"
                style="@style/SlagalicaCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_one_zero"
                android:textColor="@color/slagalica_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playerTwoScoreText"
                style="@style/SlagalicaCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/player_two_zero"
                android:textColor="@color/slagalica_text"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/ruleText"
            style="@style/SlagalicaCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/spojnice_rules"
            android:textColor="@color/slagalica_text"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:id="@+id/secondChanceInfoText"
            style="@style/SlagalicaInfoCardBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/second_chance_message"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/left1Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adele" />

                <Button
                    android:id="@+id/left2Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lady_gaga" />

                <Button
                    android:id="@+id/left3Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ariana_grande" />

                <Button
                    android:id="@+id/left4Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taylor_swift" />

                <Button
                    android:id="@+id/left5Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beyonce" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/right1Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/halo" />

                <Button
                    android:id="@+id/right2Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello" />

                <Button
                    android:id="@+id/right3Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shake_it_off" />

                <Button
                    android:id="@+id/right4Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bad_romance" />

                <Button
                    android:id="@+id/right5Button"
                    style="@style/SlagalicaAnswerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seven_rings" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/selectedPairText"
            style="@style/SlagalicaCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/selected_pair_none"
            android:textColor="@color/slagalica_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/confirmConnectionButton"
            style="@style/SlagalicaConfirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_medium"
            android:text="@string/confirm_connection" />

        <Button
            android:id="@+id/spojniceQuitButton"
            style="@style/SlagalicaDangerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_game" />

    </LinearLayout>

</ScrollView>