<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <EditText
        android:id="@+id/oldPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/newPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/oldPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/repeatNewPasswordInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_new_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/newPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/confirmResetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintTop_toBottomOf="@id/repeatNewPasswordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>